--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,16 @@ group = project.maven_group
 repositories {
     maven { url "https://maven.shedaniel.me/" }
     maven { url "https://maven.terraformersmc.com/" }
+    maven {
+        name = "CottonMC"
+        url = "https://server.bbkr.space/artifactory/libs-release"
+    }
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 
@@ -25,6 +31,8 @@ dependencies {
     }
 
     modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
+
+    modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
 }
 
 processResources {
