--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ archives_base_name=wicked-paintings
 fabric_version=0.46.4+1.18
 cloth_version=6.1.48
 mod_menu_version=3.0.1
+libgui_version=5.3.0+1.18
