--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties
 # https://fabricmc.net/develop/
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.28
-loader_version=0.14.12
+minecraft_version  = 1.19.3
+yarn_mappings      = 1.19.3+build.5
+loader_version     = 0.14.17
 
 # Mod Properties
-mod_version=1.2.0
-maven_group=ooo.foooooooooooo
-archives_base_name=wicked-paintings
+mod_version        = 1.2.0
+maven_group        = ooo.foooooooooooo
+archives_base_name = wicked-paintings
 
 # Dependencies
-fabric_version=0.69.0+1.19.2
-cloth_version=8.2.88
-mod_menu_version=4.1.2
-libgui_version=6.4.0+1.19
+fabric_version     = 0.75.1+1.19.3
+cloth_version      = 9.0.94
+mod_menu_version   = 5.0.2
+libgui_version     = 6.5.2+1.19.3
