change output jar name format

--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,9 @@ plugins {
   id 'fabric-loom' version '1.2-SNAPSHOT'
 }
 
-version = project.mod_version
+archivesBaseName = project.archives_base_name
+version = "$project.mod_version+$project.minecraft_version"
 group = project.maven_group
-
-base {
-  archivesName = project.archives_base_name
-}
 
 repositories {
   maven { url "https://maven.shedaniel.me/" }
