--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties
 # https://fabricmc.net/develop/
-minecraft_version  = 1.20.1
-yarn_mappings      = 1.20.1+build.8
-loader_version     = 0.14.21
+minecraft_version  = 1.19.2
+yarn_mappings      = 1.19.2+build.28
+loader_version     = 0.14.8
 
 # Mod Properties
 mod_version        = 1.4.0
@@ -13,7 +13,7 @@ maven_group        = ooo.foooooooooooo
 archives_base_name = wicked-paintings
 
 # Dependencies
-fabric_version     = 0.84.0+1.20.1
-cloth_version      = 11.0.99
-mod_menu_version   = 7.1.0
-libgui_version     = 8.0.0+1.20
+fabric_version     = 0.76.1+1.19.2
+cloth_version      = 8.3.103
+mod_menu_version   = 4.2.0-beta.2
+libgui_version     = 6.4.0+1.19
