--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,10 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs = -Xmx1G
+org.gradle.jvmargs=-Xmx3G -XX:+UseG1GC
+# Enable parallel task execution, this makes a multi project build a bit faster.
+org.gradle.parallel=true
 
-# Fabric Properties
-# https://fabricmc.net/develop/
-minecraft_version  = 1.20.1
-yarn_mappings      = 1.20.1+build.8
-loader_version     = 0.14.21
+# Wicked Paintings
+mod-version = 1.5.0
 
-# Mod Properties
-mod_version        = 1.4.2
-maven_group        = ooo.foooooooooooo
-archives_base_name = wicked-paintings
-
-# Dependencies
-fabric_version     = 0.84.0+1.20.1
-cloth_version      = 11.0.99
-mod_menu_version   = 7.1.0
-libgui_version     = 8.1.1+1.20.1
+# Minecraft
+minecraft-version = 1.20.1
+yarn-mappings = build.10
