--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,13 @@
-org.gradle.jvmargs=-Xmx3G -XX:+UseG1GC
+org.gradle.jvmargs  =-Xmx3G -XX:+UseG1GC
 # Enable parallel task execution, this makes a multi project build a bit faster.
-org.gradle.parallel=true
+org.gradle.parallel =true
 
 # Wicked Paintings
-mod-version = 1.5.0
+mod_version         = 1.5.0
+maven_group         = ooo.foooooooooooo
+archives_name       = WickedPaintings
+enabled_platforms   = fabric,forge
 
 # Minecraft
-minecraft-version = 1.20.1
-yarn-mappings = build.10
+minecraft_version   = 1.20.1
+yarn_mappings       = build.10
